--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="size_12dp">12dp</dimen>
+    <dimen name="size_20dp">20dp</dimen>
+    <dimen name="size_50dp">50dp</dimen>
+    <dimen name="size_200dp">200dp</dimen>
+    <dimen name="size_110dp">110dp</dimen>
+
+    <dimen name="size_12sp">12sp</dimen>
+    <dimen name="size_14sp">14sp</dimen>
+    <dimen name="size_16sp">16sp</dimen>
 </resources>
